objects/FSL__Polygon__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Color__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__KML__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>KML Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Ma_La__c</fullName>
        <label>Maximum Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Ma_Lo__c</fullName>
        <label>Maximum Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Mi_La__c</fullName>
        <label>Minimum Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Mi_Lo__c</fullName>
        <label>Minimum Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Polygons</relationshipLabel>
        <relationshipName>Polygons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_to_Inactive_Service_Territory__c</fullName>
        <formula>!FSL__Service_Territory__r.IsActive</formula>
        <label>Linked to Inactive Service Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Polygon_Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Polygon Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Map Polygon</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>FSL__Service_Territory__c</columns>
        <columns>FSL__KML__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Polygons_Mapped_to_Inactive_Territories</fullName>
        <columns>NAME</columns>
        <columns>FSL__Service_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Linked_to_Inactive_Service_Territory__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Polygons Mapped to Inactive Territories</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Polygon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Polygons</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL__Polygon_Color_HEX_Format</fullName>
        <active>false</active>
        <errorConditionFormula>(!ISBLANK(FSL__Color__c)) &amp;&amp; (NOT(REGEX(FSL__Color__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__Color__c</errorDisplayField>
        <errorMessage>Polygon color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
</CustomObject>